the last part of the code is commited

--- a/index.html
+++ b/index.html
@@ -196,6 +196,21 @@
 
     </main>
 
+    <footer>
+            <h1 class="last-logo inter-normal">LOGO</h1>
+            <p class="footer-para inter-normal">Ready to elevate your online presence? Contact us today to discuss
+                your projects and discover how we can bring your vision to life.
+            </p>
+            <div class="footer-div inter-normal">
+        
+                <div class="div-item"><a href="">Home</a></div>
+            <div class="div-item"><a href="">About</a></div>
+            <div class="div-item"><a href="">How it Works</a></div>
+            <div class="div-item"><a href="">Services</a></div>
+                
+                  </div>
+    </footer>
+
 
 
 
